[tool.poetry]
name = "chat_fastapi"
version = "0.1.0"
description = ""
authors = ["Blastz13 <sinicinr2003@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.4.0"
alembic = "^1.8.1"
Werkzeug = "^2.1.2"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
